k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kairos
  namespace: kairos
  labels:
    app: kairos
spec:
  selector:
    app: kairos
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP

---
# Service to access from outside the cluster (optional)
apiVersion: v1
kind: Service
metadata:
  name: kairos-external
  namespace: kairos
  labels:
    app: kairos
spec:
  selector:
    app: kairos
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: LoadBalancer
  # For clouds that support LoadBalancer
  # type: NodePort
  # For Minikube, use NodePort
